--- a/package.json
+++ b/package.json
@@ -3,10 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.13",
+    "@mui/material": "^5.14.13",
+    "@popperjs/core": "^2.11.8",
+    "@react-pdf/renderer": "^3.3.7",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
+    "file-saver": "^2.0.5",
+    "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
+    "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.17.0",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
