--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-select": "^5.8.0"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
